# note-taker-plus-mcp

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  README.md  auth_server.py  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt
src/note_taker_plus_mcp/: server.py
