[project]
name = "note-taker-plus-mcp"
version = "0.1.0"
description = "MCP server for the note-taker-plus spaced repetition API"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]",
    "httpx",
    "pydantic",
    "python-dotenv",
    "fastapi",
    "uvicorn",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
